View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027269 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-03-16 13:40 | 2016-12-09 16:37 |
Reporter | Assigned To | bugmaster | |||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027269: Intersection algorithm produces null-length curve | ||||
Description | ImpPrm-intersector produces B-spline with two coincident poles. | ||||
Steps To Reproduce | Test case has already been created and pushed to the branch. Source files have been attached to issue #27267. Draw[]> restore [locate_data_file bug27267_obj.brep] a Draw[]> restore [locate_data_file bug27267_tool.brep] b Draw[]> explode a f Draw[]> explode b f Draw[]> bopcurves a_1 b_1 -2d # 4 curve(s) found. Draw[]> dump c_3 *********** Dump of c_3 ************* Trimmed curve Parameters : 0 6.28318530717959 Basis curve : BSplineCurve Degree 1, 2 Poles, 2 Knots Poles : 1 : 0.42465, -1.50463276905253e-036, 1.1229 2 : 0.42465, -1.50463276905253e-036, 1.1229 Knots : 1 : 0 2 2 : 6.28318530717959 2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug27269 | ||||
|
Ask to pay attention to the fact that the shape is quite small indeed: Draw[]> restore bug27267_cmpd.brep a Draw[]> vprops a 1.0e-4 # Mass : 7.31389e-007 |
|
Branch CR27269 has been created by nbv. SHA-1: d3491e56b09641754fef29805d8e6c7974e336a8 Detailed log of new commits: Author: nbv Date: Mon Apr 11 10:38:50 2016 +0300 0027269: Intersection algorithm produces null-length curve Restriction line can correspond to a degenerated edge. In this case we shall return null-curve (instead of Null-length curve). |
|
Dear Mikhail, Please review CR27269 branch. |
|
Branch CR27269 has been updated forcibly by nbv. SHA-1: 7aa8e956c44cf13811d781e9ee0839095981763f |
|
Test script has been updated. |
|
Reviewed. |
|
Branch CR27269 has been updated forcibly by mkv. SHA-1: 3d8295738f4a5338f938921ef85e2cd8b7f72899 |
|
Dear BugMaster, Branch CR27269 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 3d8295738f4a5338f938921ef85e2cd8b7f72899 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 0 (0 on master) products component: Linux: 72 Windows: 4 MacOS: 1128 Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug27269 - OK http://occt-tests/CR27269-master-OCCT/Debian70-64/bugs/modalg_6/bug27269.html http://occt-tests/CR27269-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug27269.html Testing on Linux: Total MEMORY difference: 88489517 / 88980442 [-0.55%] Total CPU difference: 19045.79999999995 / 19139.690000000024 [-0.49%] Testing on Windows: Total MEMORY difference: 55721001 / 55762261 [-0.07%] Total CPU difference: 18110.68649339885 / 18152.27635999891 [-0.23%] |
|
Branch CR27269 has been deleted by inv. SHA-1: 3d8295738f4a5338f938921ef85e2cd8b7f72899 |
occt: master b55bd023 2016-04-11 07:38:50
Committer: bugmaster Details Diff |
0027269: Intersection algorithm produces null-length curve Restriction line can correspond to a degenerated edge. In this case we shall return null-curve (instead of Null-length curve). |
Affected Issues 0027269 |
|
mod - src/GeomInt/GeomInt_IntSS_1.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug27269 | Diff File | ||
mod - tests/bugs/modalg_6/bug27325 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-16 13:40 |
|
New Issue | |
2016-03-16 13:40 |
|
Assigned To | => msv |
2016-03-16 14:07 |
|
Relationship added | related to 0027252 |
2016-03-16 15:34 |
|
Relationship deleted | related to 0027252 |
2016-03-16 17:20 | msv | Assigned To | msv => nbv |
2016-03-16 17:20 | msv | Priority | normal => low |
2016-03-16 17:20 | msv | Status | new => assigned |
2016-03-16 17:20 | msv | Product Version | => 7.0.0 |
2016-03-17 09:35 |
|
Note Added: 0051717 | |
2016-04-11 10:41 | git | Note Added: 0052562 | |
2016-04-11 10:42 |
|
Note Added: 0052563 | |
2016-04-11 10:42 |
|
Assigned To | nbv => msv |
2016-04-11 10:42 |
|
Status | assigned => resolved |
2016-04-11 10:42 |
|
Steps to Reproduce Updated | |
2016-04-12 14:31 | git | Note Added: 0052608 | |
2016-04-12 14:31 |
|
Note Added: 0052609 | |
2016-04-27 16:27 | msv | Note Added: 0053640 | |
2016-04-27 16:27 | msv | Assigned To | msv => bugmaster |
2016-04-27 16:27 | msv | Status | resolved => reviewed |
2016-04-27 16:37 |
|
Assigned To | bugmaster => mkv |
2016-04-27 17:38 | git | Note Added: 0053651 | |
2016-04-27 20:32 |
|
Assigned To | mkv => apv |
2016-04-28 11:13 |
|
Test case number | => bugs modalg_6 bug27269 |
2016-04-28 12:00 |
|
Note Added: 0053663 | |
2016-04-28 12:00 |
|
Assigned To | apv => bugmaster |
2016-04-28 12:00 |
|
Status | reviewed => tested |
2016-04-29 16:10 | bugmaster | Changeset attached | => occt master b55bd023 |
2016-04-29 16:10 | bugmaster | Status | tested => verified |
2016-04-29 16:10 | bugmaster | Resolution | open => fixed |
2016-05-20 12:22 | git | Note Added: 0054198 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |