0027269: Intersection algorithm produces null-length curve

Restriction line can correspond to a degenerated edge. In this case we shall return null-curve (instead of Null-length curve).